# matrix_speedrunner

./: .gitignore  Cargo.toml  LICENSE  README.md  open-vault.sh
.github/workflows/: release.yml
assets/: config.toml
scripts/: build-all.sh  build-linux.sh  build-windows.ps1  build-windows.sh
src/: config.rs  game.rs  hack.rs  main.rs  rain.rs  score.rs  speedrunner.rs
src/app/: handlers.rs  mod.rs  screen.rs
src/ui/: common.rs  difficulty.rs  game_over.rs  identity.rs  menu.rs  mod.rs  play.rs  player_detail.rs  players.rs  rules.rs  scores.rs
