[package]
name = "matrix_speedrunner"
version = "0.1.0"
edition = "2021"
description = "CLI speedrunner & hacking time-attack mini-game with Matrix theme"
license = "WTFPL"
authors = ["dminier"]
repository = "https://github.com/dminier/matrix_speedrunner"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
